adding examples of composition and inheritance

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,9 @@
     <module>strings</module>
     <module>enum</module>
     <module>exceptions</module>
+    <module>composition</module>
+    <module>inheritance</module>
+    <module>staticaccess</module>
   </modules>
 
 
