--- a/logging/pom.xml
+++ b/logging/pom.xml
@@ -2,21 +2,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <parent>
+    <artifactId>java-examples</artifactId>
+    <groupId>pdp</groupId>
+    <version>1.0-SNAPSHOT</version>
+  </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>pdp</groupId>
-  <artifactId>java-examples</artifactId>
-  <packaging>pom</packaging>
+  <artifactId>logging</artifactId>
+  <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-  <modules>
-    <module>sort</module>
-    <module>strings</module>
-    <module>enum</module>
-    <module>exceptions</module>
-    <module>logging</module>
-    <module>share</module>
-  </modules>
-
+  <name>logging</name>
+  <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -31,8 +28,8 @@
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-simple</artifactId>
-      <version>1.7.7</version>
+      <artifactId>slf4j-log4j12</artifactId>
+      <version>1.7.5</version>
     </dependency>
   </dependencies>
 </project>
