--- a/pom.xml
+++ b/pom.xml
@@ -18,4 +18,24 @@
     <module>share</module>
   </modules>
 
+  <properties>
+    <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
+    <java.compiler.version>1.7</java.compiler.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+  </properties>
+
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>${maven-compiler-plugin.version}</version>
+        <configuration>
+          <source>${java.compiler.version}</source>
+          <target>${java.compiler.version}</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
 </project>
