--- a/pom.xml
+++ b/pom.xml
@@ -9,21 +9,36 @@
   <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
 
-  <modules>
-    <module>sort</module>
-    <module>strings</module>
-    <module>enum</module>
-    <module>exceptions</module>
-    <module>logging</module>
-    <module>share</module>
-  </modules>
-
   <properties>
     <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
     <java.compiler.version>1.7</java.compiler.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    <slf4j.version>1.7.5</slf4j.version>
+    <logback-classic.version>1.0.13</logback-classic.version>
   </properties>
+
+  <dependencies>
+
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.4</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>${slf4j.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>${logback-classic.version}</version>
+    </dependency>
+
+  </dependencies>
 
   <build>
     <plugins>
